fix overflow

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -213,7 +213,6 @@ p {
 
 .content-container {
     max-width: 1000px;
-    width: 1000px;
     margin-left: auto;
     margin-right: auto;
     padding-inline: var(--spacing);
